--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+main {
+  background: black;
+  display: flex;
+  align-items: center;
+}
+
+@media only screen and (max-width: 558px) {
+  main {
+    flex-direction: column;
+  }
+  section.sideBar {
+    display: none;
+  }
+}
