--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 main {
   background: black;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 
 @media only screen and (max-width: 558px) {
