--- a/src/features/header/Header.css
+++ b/src/features/header/Header.css
@@ -18,7 +18,7 @@ div.topicsDropdown {
     display: none;
 }
 
-@media only screen and (max-width: 558px) {
+@media only screen and (max-width: 1000px) {
     header {
         flex-direction: column;
     }
@@ -27,5 +27,9 @@ div.topicsDropdown {
     }
     div.topicsDropdown {
         display: inline;
+    }
+    div.topicsDropdown .MuiFormControl-root {
+        min-width: 196px;
+        margin: 10px;
     }
 }
