--- a/src/features/posts/Posts.css
+++ b/src/features/posts/Posts.css
@@ -1,7 +1,7 @@
 section.posts {
     background: black;
     color: black;
-    width: 66%;
+    width: 45%;
     padding: 20px;
     margin: 20px;
 }
@@ -11,8 +11,9 @@ img#loadingGif {
     margin: 50% auto;
 }
 
-@media only screen and (max-width: 558px) {
+@media only screen and (max-width: 1000px) {
     section.posts {
-        width: 90%;
+        width: 100%;
+        padding: 0px;
     }
 }
