--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,13 @@ main {
   background: black;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
 }
 
-@media only screen and (max-width: 558px) {
+@media only screen and (max-width: 1000px) {
   main {
     flex-direction: column;
+    padding: 5%;
   }
   section.sideBar {
     display: none;
