Styling changes to improve text readability and animations on hover over cards

--- a/src/features/posts/post/Post.css
+++ b/src/features/posts/post/Post.css
@@ -5,14 +5,24 @@ article.post {
     align-items: center;
     width: 100%;
     margin: 0 5% 2% 0;
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    cursor: pointer;
+}
+
+article.post:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
 div.post-top {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    width: 96%;
+    width: 100%;
 }
 
 div.post-top h2 {
@@ -20,18 +30,25 @@ div.post-top h2 {
     flex-basis: 75%;
     flex-grow: 0;
     flex-shrink: 0;
+    margin-left: 20px;
 }
 
 div.likes {
     flex-direction: column;
-    margin: 20px;
+    margin: 20px 0;
     text-align: center;
+    width: 13%;
+}
+
+div.likes p {
+    margin: 0;
 }
 
 div.post-middle {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
 div.post-middle p {
@@ -60,6 +77,15 @@ div.comments {
     cursor: pointer;
 }
 
+.card{
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  padding: 14px 80px 18px 36px;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 1000px) {
     article.post {
         margin: 0 0 5% 0;
@@ -84,6 +110,10 @@ div.comments {
     div.post-bottom {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    div.post-middle p {
+        font-size: 12px;
     }
 
     div.post-bottom p {
