Remove hover animation
- remove hover animation on cards
- remove cursor pointer - this should only be on buttons and links, not entire cards
- change padding for media query - may adjust later again

--- a/src/features/posts/post/Post.css
+++ b/src/features/posts/post/Post.css
@@ -8,13 +8,6 @@ article.post {
     border-radius: 4px;
     background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-    cursor: pointer;
-}
-
-article.post:hover {
-    transform: scale(1.05);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
 
 div.post-top {
@@ -79,7 +72,7 @@ div.comments {
 
 @media only screen and (max-width: 1000px) {
     article.post {
-        margin: 0 0 5% 0;
+        margin: 0 0 14px 0;
         width: 100%;
         padding: 0;
     }
