--- a/src/features/posts/post/Post.css
+++ b/src/features/posts/post/Post.css
@@ -1,7 +1,7 @@
 article.post {
     background: whitesmoke;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     width: 100%;
     margin: 0 5% 2% 0;
@@ -10,27 +10,23 @@ article.post {
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
 }
 
-div.post-top {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+div.post-top h2 {
+    text-align: left;
+    margin: 16px 20px 13px 13px;
+}
+
+div.post-container {
     width: 100%;
 }
 
-div.post-top h2 {
-    text-align: left;
-    flex-basis: 75%;
-    flex-grow: 0;
-    flex-shrink: 0;
-    margin-left: 20px;
-}
-
 div.likes {
+    display: flex;
     flex-direction: column;
-    margin: 20px 0;
-    text-align: center;
-    width: 13%;
+    align-items: center;
+    min-width: 60px;
+    align-self: stretch;
+    background-color: rgb(232, 232, 232);
+    border-radius: 4px 0 0 4px;
 }
 
 div.likes p {
@@ -45,7 +41,7 @@ div.post-middle {
 }
 
 div.post-middle p {
-    padding: 30px;
+    padding: 5px 20px 5px 13px;
 }
 
 div.post-middle img {
@@ -55,12 +51,18 @@ div.post-middle img {
 }
 
 div.post-bottom {
-    border-top: 1.5px solid black;
+    border-top: 1.5px solid rgb(218, 218, 218);
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 75%;
+    width: 100%;
+    margin-top: 13px;
+}
+
+.author {
+ min-width: 220px;
+ padding-left: 5px;
 }
 
 div.comments {
@@ -68,7 +70,14 @@ div.comments {
     flex-direction: row;
     align-items: center;
     cursor: pointer;
+    padding-right: 5px;
 }
+
+.comments p {
+    padding-right: 5px;
+}
+
+
 
 @media only screen and (max-width: 1000px) {
     article.post {
@@ -91,9 +100,9 @@ div.comments {
 }
 
 @media only screen and (max-width: 767px) {
-    div.post-bottom {
-        flex-direction: column;
-        align-items: flex-start;
+    .author {
+        margin: 10px 0 2px 5px;
+        min-width: 12px;
     }
 
     div.post-middle p {
@@ -101,15 +110,30 @@ div.comments {
     }
 
     div.post-bottom p {
-        margin: 5px 0px;
+        font-size: 12px;
+    }
+    .time-passed {
+        
+        margin: 5px 0 10px 5px;
     }
 
     div.post-top h2 {
         font-size: 1rem;
         flex-shrink: 1;
     }
+}
 
-    div.post-middle p {
-        padding: 5px;
+@media only screen and (max-width: 580px) {
+    div.post-bottom {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    div.post-bottom p {
+       padding: 0;
+    }
+    div.comments {
+        position: absolute;
+        right: 29px;
+        padding-top: 12px;
     }
 }
