--- a/src/features/header/Header.css
+++ b/src/features/header/Header.css
@@ -1,8 +1,14 @@
 header {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background: whitesmoke;
+    max-width: 1390px;
+    margin: auto;
+}
+
+div.header-container {
+    background-color: whitesmoke;
 }
 
 div.logo {
@@ -27,18 +33,41 @@ div.topicsDropdown {
     display: none;
 }
 
-@media only screen and (max-width: 1000px) {
-    header {
-        flex-direction: column;
+@media only screen and (max-width: 1600px) {
+    div.logo {
+        padding-left: 20px;
     }
+}
+
+@media only screen and (max-width: 1000px) {
+    
     h1 {
         margin: 0px;
     }
     div.topicsDropdown {
         display: inline;
     }
+    .searchBar {
+        display: flex;
+    }
     div.topicsDropdown .MuiFormControl-root {
         min-width: 196px;
         margin: 10px;
     }
+}
+
+@media only screen and (max-width: 860px) {
+
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+    .searchBar {
+        flex-direction: column;
+    }
+
+    div.logo {
+        padding: 0;
+    }
+
 }
