--- a/src/features/search/Search.css
+++ b/src/features/search/Search.css
@@ -14,3 +14,10 @@ input {
 #outlined-basic {
     width: 300px;
 }
+
+@media only screen and (max-width: 860px) {
+    #outlined-basic {
+        width: 168px;
+    }
+  }
+  
